# filler_visualizator

./: .gitignore  CMakeLists.txt  Makefile  input_medium
inc/: graphics.h  visualizator.h
libftprintf/: .gitignore
src/: draw.c  draw_grid.c  draw_o.c  draw_x.c  error_exit.c  graphics.c  main.c  plateau.c
